Update the html

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resource/style.css">
+    <link rel="stylesheet" href="Colmar_Academy/resource/style.css">
     <title>Colmar Academy</title>
 </head>
 
 <body>
     <div id="header">
         <div class="Desktop-logo">
-            <a href="index.html"><img src="resource/images/ic-logo.svg"></a>
+            <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
             <h3 class="desktop-only"><strong>COLMAR</strong>ACADEMY</h3>
 
         </div>
         <div class="mobile-icon">
-            <a href="#"><img src="resource/images/ic-on-campus.svg"></a>
-            <a href="#"><img src="resource/images/ic-online.svg"></a>
-            <a href="#"><img src="resource/images/ic-login.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-on-campus.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-online.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-login.svg"></a>
         </div>
         <div class="Desktop-menu">
             <nav>
