--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
         <div class="Desktop-logo">
             <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
             <h3 class="desktop-only"><strong>COLMAR</strong>ACADEMY</h3>
-
-        </div>
-        <div class="mobile-icon">
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-on-campus.svg"></a>
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-online.svg"></a>
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-login.svg"></a>
         </div>
         <div class="Desktop-menu">
             <nav>
@@ -30,6 +24,12 @@
                     <li><a href="#">Sign in</a></li>
                 </ul>
             </nav>
+        </div>
+        <div class="mobile-icon">
+            <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-on-campus.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-online.svg"></a>
+            <a href="#"><img src="Colmar_Academy/resource/images/ic-login.svg"></a>
         </div>
     </div>
 </body>
