--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
     <div id="header">
         <div class="Desktop-logo">
             <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
-            <h3 class="desktop-only"><strong>COLMAR</strong>ACADEMY</h3>
+            <div class="desktop-only">
+                <h3><strong>COLMAR</strong>ACADEMY</h3>
+            </div>
+            <div class="Desktop-menu">
+                <nav>
+                    <ul>
+                        <li><a href="#">On Campus</a></li>
+                        <li><a href="#">Online</a></li>
+                        <li><a href="#">For Companies</a></li>
+                        <li><a href="#">Sign in</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="mobile-icon">
+                <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
+                <a href="#"><img src="Colmar_Academy/resource/images/ic-on-campus.svg"></a>
+                <a href="#"><img src="Colmar_Academy/resource/images/ic-online.svg"></a>
+                <a href="#"><img src="Colmar_Academy/resource/images/ic-login.svg"></a>
+            </div>
         </div>
-        <div class="Desktop-menu">
-            <nav>
-                <ul>
-                    <li><a href="#">On Campus</a></li>
-                    <li><a href="#">Online</a></li>
-                    <li><a href="#">For Companies</a></li>
-                    <li><a href="#">Sign in</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="mobile-icon">
-            <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-on-campus.svg"></a>
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-online.svg"></a>
-            <a href="#"><img src="Colmar_Academy/resource/images/ic-login.svg"></a>
-        </div>
-    </div>
 </body>
 
 </html>
