--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <div class="Desktop-logo">
             <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
             <div class="desktop-only">
-                <h3><span>COLMAR</span>ACADEMY</h3>
-            </div>
-            <div class="desktop-menu">
+                <h3>COLMARACADEMY</h3>
                 <nav>
                     <ul>
                         <li><a href="#">On Campus</a></li>
