--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="header">
-        <div class="Desktop-logo">
+        <div class="desktop-logo">
             <a href="index.html"><img src="Colmar_Academy/resource/images/ic-logo.svg"></a>
             <h3>COLMARACADEMY</h3>
         </div>
