--- a/index.html
+++ b/index.html
@@ -66,6 +66,62 @@
             </div>
         </div>
     </div>
+    <div id="learning">
+        <div class="learning-title">
+            <h2>Start Learning</h2>
+        </div>
+        <div class="learning-section">
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-software.jpg">
+                <div class="cat-info">
+                    <h4>Software engineering</h4>
+                    <p>COURSES</p>
+                    <p>Web Development, Mobile, Development, IOT, APIs</p>
+                </div>
+            </div>
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-computer-art.jpg">
+                <div class="cat-info">
+                    <h4>Computer art</h4>
+                    <p>COURSES</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation.</p>
+                </div>
+            </div>
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-design.jpg">
+                <div class="cat-info">
+                    <h4>Design</h4>
+                    <p>COURSES</p>
+                    <p>User Experience Design, User Research, Visual Design.</p>
+                </div>
+            </div>
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-data.jpg">
+                <div class="cat-info">
+                    <h4>Data</h4>
+                    <p>COURSES</p>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                </div>
+            </div>
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-business.jpg">
+                <div class="cat-info">
+                    <h4>Business</h4>
+                    <p>COURSES</p>
+                    <p>Product Development, Business, Development, Startup.</p>
+                </div>
+            </div>
+            <div class="categories">
+                <img src="Colmar_Academy/resource/images/course-marketing.jpg">
+                <div class="cat-info">
+                    <h4>Marketing</h4>
+                    <p>COURSES</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
