Final Design of the site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <div id="mobile-logo">
+        <div class="logo">
+            <img src="Colmar_Academy/resource/images/ic-logo.svg">
+            <img src="Colmar_Academy/resource/images/ic-on-campus.svg">
+            <img src="Colmar_Academy/resource/images/ic-online.svg">
+            <img src="Colmar_Academy/resource/images/ic-login.svg">
+        </div>
+    </div>
     <div id="header">
         <img src="Colmar_Academy/resource/images/ic-logo.svg">
         <h3><span>COLMAR</span>ACADEMY</h3>
@@ -39,16 +47,18 @@
             <p class="article">Emanuel, Sr Strategist at Hiring.com</p>
         </div>
         <div class="layout">
-            <div class="new-layout">
-                <img src="Colmar_Academy/resource/images/information-orientation.jpg">
+            <div class="new-layout gray-1">
+                <img src="Colmar_Academy/resource/images/information-orientation.jpg" class="new">
+                <img class="mobile-img" src="Colmar_Academy/resource/images/information-orientation-mobile.jpg">
                 <div class="layout-font">
                     <h4>Orientation Date</h4>
                     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                     <p><a href="#">Read More</a></p>
                 </div>
             </div>
-            <div class="new-layout">
-                <img src="Colmar_Academy/resource/images/information-campus.jpg">
+            <div class="new-layout gray-1">
+                <img src="Colmar_Academy/resource/images/information-campus.jpg" class="new">
+                <img class="mobile-img" src="Colmar_Academy/resource/images/information-campus-mobile.jpg">
                 <div class="layout-font">
                     <h4>Our Campus</h4>
                     <p>Find which campus is close by you</p>
@@ -56,13 +66,13 @@
                 </div>
             </div>
             <div class="new-layout gray">
-                <img src="Colmar_Academy/resource/images/information-guest-lecture.jpg">
+                <img src="Colmar_Academy/resource/images/information-guest-lecture.jpg" class="new">
+                <img class="mobile-img" src="Colmar_Academy/resource/images/information-guest-lecture-mobile.jpg">
                 <div class="layout-font">
                     <h4>Our guest lecture</h4>
                     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                     <p><a href="#">Read More</a></p>
                 </div>
-
             </div>
         </div>
     </div>
@@ -71,48 +81,48 @@
             <h2>Start Learning</h2>
         </div>
         <div class="learning-section">
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-software.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-software.jpg">
                 <div class="cat-info">
                     <h4>Software engineering</h4>
                     <p>COURSES</p>
                     <p>Web Development, Mobile, Development, IOT, APIs</p>
                 </div>
             </div>
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-computer-art.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-computer-art.jpg">
                 <div class="cat-info">
                     <h4>Computer art</h4>
                     <p>COURSES</p>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation.</p>
                 </div>
             </div>
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-design.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-design.jpg">
                 <div class="cat-info">
                     <h4>Design</h4>
                     <p>COURSES</p>
                     <p>User Experience Design, User Research, Visual Design.</p>
                 </div>
             </div>
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-data.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-data.jpg">
                 <div class="cat-info">
                     <h4>Data</h4>
                     <p>COURSES</p>
                     <p>Data Science, Big Data, SQL, Data Visualization</p>
                 </div>
             </div>
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-business.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-business.jpg">
                 <div class="cat-info">
                     <h4>Business</h4>
                     <p>COURSES</p>
                     <p>Product Development, Business, Development, Startup.</p>
                 </div>
             </div>
-            <div class="categories">
-                <img src="Colmar_Academy/resource/images/course-marketing.jpg">
+            <div class="categories gray-1">
+                <img class="no-img" src="Colmar_Academy/resource/images/course-marketing.jpg">
                 <div class="cat-info">
                     <h4>Marketing</h4>
                     <p>COURSES</p>
@@ -120,8 +130,43 @@
                 </div>
             </div>
         </div>
-
     </div>
+    <div id="Title-one">
+        <h2>Thesis exhibit</h2>
+    </div>
+    <div id="video-container">
+        <div class="video-player">
+            <video controls><source src="Colmar_Academy/resource/videos/thesis.mp4"></video>
+            <h4>Reimagine Urban</h4>
+            <p class="article-two">Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Id leo in vitae turpis massa sed elementum tempus. Et malesuada fames ac turpis egestas maecenas pharetra. Praesent elementum facilisis leo vel fringilla est ullamcorper
+                eget nulla. Viverra nam libero justo laoreet.</p>
+        </div>
+        <div class="video-sidebar">
+            <div class="video-img gray">
+                <img src="Colmar_Academy/resource/images/thesis-fisma.jpg">
+                <div class="video-words">
+                    <h4>Fisma: Design and Prototype</h4>
+                    <p>Designer showcase of new prototype products</p>
+                </div>
+            </div>
+            <div class="video-img gray-1">
+                <img src="Colmar_Academy/resource/images/thesis-now-and-then.jpg">
+                <div class="video-words">
+                    <h4>Now and then</h4>
+                    <p>Research study about new york</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="footer-info">
+            <div class="copyright">
+                <p>&copy 2021 Colmar Academy. All rights reserved</p>
+            </div>
+            <div class="policy one">
+                <p>Term | Privacy</p>
+            </div>
+        </div>
 </body>
 
 </html>
